apps/prd/esbly/epee/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: epee
  labels:
    app: epee
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: epee
  type: ClusterIP
