apps/prd/esbly/epee/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epee
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: epee77.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epee
                port:
                  number: 80
    - host: www.epee77.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epee
                port:
                  number: 80
  tls:
    - secretName: epee77-org
      hosts:
        - epee77.org
        - www.epee77.org
